Update open api docs
